--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "encore/laravel-admin",
+    "name": "uretral/laravel-admin",
     "description": "laravel admin",
     "type": "library",
     "keywords": ["laravel", "admin", "grid", "form"],
@@ -10,6 +10,12 @@
             "name": "zsong",
             "email": "zosong@126.com"
         }
+    ],
+    "repositories": [
+    {
+        "type": "git",
+        "url": "git@bitbucket.org:uretral/laravel-admin.git"
+    }
     ],
     "require": {
         "php": ">=7.0.0",
