--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "repositories": [
     {
         "type": "git",
-        "url": "git@bitbucket.org:uretral/laravel-admin.git"
+        "url": "https://uretraldev@bitbucket.org/uretraldev/laravel-admin.git"
     }
     ],
     "require": {
